--- a/style/microsite.css
+++ b/style/microsite.css
@@ -124,7 +124,9 @@ input[type="search"] {
 	content: " ";
 	display: table;
 }
-
+.contextual-links-wrapper ul{
+display: none;
+}
 
 /* # Defaults
 ---------------------------------------------------------------------------------------------------- */
@@ -2328,6 +2330,7 @@ margin-top:10px;
 	border: 2px solid #505050;
 	padding: 40px;
 	background-color: #fff;
+max-width: 675px;
 }
 
 .slogan{
@@ -2340,7 +2343,7 @@ font-family: trajan !important;
 	font-size: 16px;
 color: #808080;
 line-height: 92%;
-
+max-width: 675px;
 }
 .slogan2{
 letter-spacing: 5px;
