--- a/style/microsite.css
+++ b/style/microsite.css
@@ -2314,9 +2314,11 @@ padding-bottom: 100px !important;
 }
 
 .invite-block p{
-line-height: 50%;
-padding-left:100px;
-padding-right:100px;
+	font-size: 12px;
+	letter-spacing: 0px;
+	padding-left:15px;
+	padding-right:15px;
+margin-top:-15px;
 }
 
 .invite-block .name { 
