--- a/style/microsite.css
+++ b/style/microsite.css
@@ -797,6 +797,7 @@ th {
 	padding: 10px;
 	text-align: center;
 	background-color: #535353;
+    border-radius: 20px 20px 0 0;
 }
 
 .footer-widgets .widget-title {
@@ -1511,6 +1512,7 @@ img.alignright,
 .image-section .widget-wrap {
 	border: 2px solid #535353;
 	padding: 40px;
+    border-radius: 25px;
 }
 
 .home-even .featuredpage:nth-of-type(odd),
