--- a/style/microsite.css
+++ b/style/microsite.css
@@ -1089,7 +1089,7 @@ img.alignright,
 	background: none;
 	border: none;
 	box-shadow: none;
-/*	width: 350px; */
+	width: 500px; 
 }
 
 .header-image .site-title {
