--- a/style/microsite.css
+++ b/style/microsite.css
@@ -1105,7 +1105,7 @@ min-width: 600px;
 	/* Adjusted
 	** min-height: 140px --> 280px;
 	*/
-	min-height: 300px;
+/*	min-height: 100px; */
 	width: 100%;
 }
 
