--- a/style/microsite.css
+++ b/style/microsite.css
@@ -2425,3 +2425,23 @@ img.emoji {
             span.rwd-line { display: inline;white-space: nowrap; }
 
         
+.form-wrapper{
+	margin-top:50px;
+	max-width:500px;
+	margin-left:auto;
+	margin-right:auto;
+	background: rgb(54, 25, 25);
+	background: rgba(54, 25, 25, .7);
+	padding:30px;
+	border-radius: 25px;
+}
+
+.form-wrapper label{
+font-size:18px;
+color: white;
+font-family: Sans-Serif;
+}
+
+.form-submit {
+color:black !important;
+}
