--- a/style/microsite.css
+++ b/style/microsite.css
@@ -2426,14 +2426,15 @@ img.emoji {
 
         
 .form-wrapper{
-	margin-top:50px;
+	margin-top:70px;
 	max-width:500px;
 	margin-left:auto;
 	margin-right:auto;
-	background: rgb(54, 25, 25);
-	background: rgba(54, 25, 25, .7);
-	padding:30px;
+	background: rgb(70, 50, 50);
+	background: rgba(70, 50, 50, .7);
+	padding:40px;
 	border-radius: 25px;
+border: 2px solid black;
 }
 
 .form-wrapper label{
@@ -2441,7 +2442,12 @@ font-size:18px;
 color: white;
 font-family: Sans-Serif;
 }
-
+.description{
+font-size:14px;
+color: white;
+font-family: Sans-Serif;
+margin-top: -10px;
+}
 .form-submit {
 color:black !important;
 }
