--- a/style/microsite.css
+++ b/style/microsite.css
@@ -2443,6 +2443,7 @@ color: white;
 font-family: Sans-Serif;
 }
 .description{
+font-style: italic;
 font-size:14px;
 color: white;
 font-family: Sans-Serif;
