--- a/style/microsite.css
+++ b/style/microsite.css
@@ -2465,11 +2465,13 @@ z-index:50;
 	color: white;
 	background: rgb(70, 50, 50);
 	background: rgba(70, 50, 50, .7);
-	margin-top: -300px;
+
 	padding:30px 10px 10px 10px;
 	border-radius: 25px;
 	border: 2px solid black;
 	max-width:600px;
+margin-top:80px;
+margin-bottom: -180px;
 }
 .splash-text a{
  color: #008cba;
