--- a/style/microsite.css
+++ b/style/microsite.css
@@ -2408,3 +2408,21 @@ img.emoji {
 	background: none !important;
 	padding: 0 !important;
 }
+
+.webform-client-form{
+border-radius: 25px;
+padding: 20px;
+border: 1px solid #ccc;
+margin-left: auto;
+margin-right: auto;
+max-width: 400px;
+background: rgb(0, 0, 0);
+
+/* RGBa with 0.6 opacity */
+
+background: rgba(0, 0, 0, 0.1);
+}
+
+.webform-client-form input{
+border-radius: 5px;
+}
