--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,14 +1,7 @@
 // Non-modular or client styles for the .l-content region.
- 
-.main{
-margin-top: 8px;
-margin-bottom: 8px;
-padding:13px;
 
 
-}
-
-.front .l-main .field-content a{
-padding-top: 8px;
-display: inline-block;
+#caption{
+margin-top:4px;
+line-height:97%;
 }
