--- a/style/microsite.css
+++ b/style/microsite.css
@@ -283,6 +283,7 @@ h1,
 h2,
 h3,
 h4,
+wh4,
 h5,
 h6 {
 	/* Adjustment
@@ -307,6 +308,9 @@ h3 {
 }
 
 h4 {
+	font-size: 20px;
+}
+wh4 {
 	font-size: 20px;
 }
 
@@ -1464,6 +1468,7 @@ img.alignright,
 .front-page-3 h2,
 .front-page-3 h3,
 .front-page-3 h4,
+.front-page-3 wh4,
 .front-page-3 h5,
 .front-page-3 h6,
 .front-page-3 .featured-content .entry-title a,
@@ -2014,6 +2019,8 @@ li.comment.depth-1 {
 		padding: 20px;
 	}	
 	
+	.cafe-pro-home .content .ten-widgets .widget,
+	.cafe-pro-home .content .nine-widgets .widget,
 	.cafe-pro-home .content .eight-widgets .widget,
 	.cafe-pro-home .content .five-widgets .widget,
 	.cafe-pro-home .content .five-widgets .widget:nth-last-of-type(-n+2),
@@ -2272,6 +2279,7 @@ background-color: #63c8ea ;
 }
 
 #front-page-1 p, 
+#front-page-1 wh4, 
 #front-page-1 h4 { 
 	font-family: 'Open Sans', sans-serif;
 	color: #fff;
