--- a/style/microsite.css
+++ b/style/microsite.css
@@ -1442,7 +1442,9 @@ img.alignright,
 .front-page-1,
 .front-page-2,
 .front-page-3,
-.front-page-4 {
+.front-page-4, 
+.front-page-5,
+.front-page-6{
 	border-top: 74px solid transparent;
 	margin-top: -74px;
 	-webkit-background-clip: padding-box;
@@ -1922,7 +1924,8 @@ li.comment.depth-1 {
 	
 	.front-page-header,
 	.front-page-2,
-	.front-page-4 {
+	.front-page-4,
+	.front-page-6 {
 		background-attachment: scroll;
 		background-position: top;
 		-webkit-background-size: cover;
@@ -2162,7 +2165,9 @@ li.comment.depth-1 {
 	.front-page-1,
 	.front-page-2,
 	.front-page-3,
-	.front-page-4 {
+	.front-page-4, 
+	.front-page-5,
+	.front-page-6{
 		border-top: none;
 		margin-top: 0;
 	}
